fix z-index navbar (vuepress) + script (lite + full vars)

--- a/packages/docs/.vuepress/styles/index.styl
+++ b/packages/docs/.vuepress/styles/index.styl
@@ -63,7 +63,7 @@
 }
 
 .navbar {
-  z-index: 40;
+  z-index: 35;
 }
 
 .sidebar {
